--- a/src/ui/qrk.ui
+++ b/src/ui/qrk.ui
@@ -10,11 +10,6 @@
     <height>768</height>
    </rect>
   </property>
-  <property name="font">
-   <font>
-    <family>Arial</family>
-   </font>
-  </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
@@ -37,7 +32,7 @@
      <x>0</x>
      <y>0</y>
      <width>1024</width>
-     <height>28</height>
+     <height>27</height>
     </rect>
    </property>
    <property name="font">
@@ -46,22 +41,12 @@
     </font>
    </property>
    <widget class="QMenu" name="menuDatei">
-    <property name="font">
-     <font>
-      <family>Arial</family>
-     </font>
-    </property>
     <property name="title">
      <string>Da&amp;tei</string>
     </property>
     <addaction name="actionDEP_Exportieren"/>
    </widget>
    <widget class="QMenu" name="menuHilfe">
-    <property name="font">
-     <font>
-      <family>Arial</family>
-     </font>
-    </property>
     <property name="title">
      <string>Hi&amp;lfe</string>
     </property>
@@ -85,11 +70,6 @@
   <action name="actionDEP_Exportieren">
    <property name="text">
     <string>&amp;DEP Exportieren</string>
-   </property>
-   <property name="font">
-    <font>
-     <family>Arial</family>
-    </font>
    </property>
   </action>
   <action name="actionEOD">
@@ -124,7 +104,7 @@
   </action>
   <action name="actionQRK_Forum">
    <property name="text">
-    <string>QRK Forum</string>
+    <string>QRK &amp;Forum</string>
    </property>
   </action>
  </widget>
