Imported Upstream version 0.16.0517

--- a/src/font/fontselector.ui
+++ b/src/font/fontselector.ui
@@ -19,7 +19,11 @@
      <item>
       <layout class="QFormLayout" name="formLayout">
        <item row="1" column="1">
-        <widget class="QFontComboBox" name="fontComboBox"/>
+        <widget class="QFontComboBox" name="fontComboBox">
+         <property name="currentText">
+          <string/>
+         </property>
+        </widget>
        </item>
        <item row="2" column="0">
         <widget class="QLabel" name="pointSizeLabel">
